--- a/delivery/login.html
+++ b/delivery/login.html
@@ -3,12 +3,12 @@
    <head>
       <meta charset="utf-8">
       <title>Login Form Design | CodeLab</title>
-      <link rel="stylesheet" href="./css/style.css">
+      <link rel="stylesheet" href="../css/style.css">
    </head>
    <body>
       <div class="wrapper">
          <div class="title">
-            Register Form
+            Login Form
          </div>
          <form action="#">
             <div class="field">
@@ -16,16 +16,21 @@
                <label>Email Address</label>
             </div>
             <div class="field">
-               <input type="username" required>
-               <label>Username</label>
-            </div>
-            <div class="field">
                <input type="password" required>
                <label>Password</label>
             </div>
-            <div class="field">
-               <input type="submit" value="Register">
+            <div class="content">
+               <div class="pass-link">
+                  <a href="#">Forgot password?</a>
+               </div>
+               <div class="pass-link">
+                  <a href="register.html">Create new account?</a>
+               </div>
             </div>
+            <div class="field">
+               <input type="submit" value="Login">
+            </div>
+         </form>
       </div>
    </body>
 </html>
