dah elok dekat add to cart

--- a/delivery/CategoryMenu/Sarapan.html
+++ b/delivery/CategoryMenu/Sarapan.html
@@ -63,6 +63,7 @@
       <p id="cart-total"></p>
       <div class="modal-actions">
         <button id="proceed-button">Proceed</button>
+        <button id="clear-button">Clear</button>
         <button id="close-button">Close</button>
       </div>
     </div>
