--- a/delivery/CategoryMenu/Sup.html
+++ b/delivery/CategoryMenu/Sup.html
@@ -12,6 +12,22 @@
     <h2>Café Delight</h2>
   </div>
 
+  <!-- Main Wrapper
+  <div class="main-wrapper"> -->
+    <!-- Sidebar Section -->
+    <!-- <aside class="sidebar">
+      <nav class="sidebar-nav">
+        <ul>
+          <li><a href="../home.html">Home</a></li>
+          <li><a href="Sarapan.html">Sarapan</a></li>
+          <li><a href="Sup.html">Sup</a></li>
+          <li><a href="/pages/meerebus.html">Mee Rebus</a></li>
+          <li><a href="/pages/addon.html">Add On</a></li>
+          <li><a href="/pages/contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </aside> -->
+
   <div class="product-container">
     <h1>Sarapan</h1>
     <p class="category-description">Trying our signature soup </p>
@@ -127,7 +143,7 @@
 
   <button id="cart-button">🛒 Cart (<span id="cart-count">0</span>)</button>
   
-  <!-- Cart Modal -->
+<!-- Cart Modal -->
   <div id="cart-modal" class="modal">
     <div class="modal-content">
       <span id="close-modal" class="close">&times;</span>
@@ -136,6 +152,7 @@
       <p id="cart-total"></p>
       <div class="modal-actions">
         <button id="proceed-button">Proceed</button>
+        <button id="clear-button">Clear</button>
         <button id="close-button">Close</button>
       </div>
     </div>
