--- a/delivery/home.html
+++ b/delivery/home.html
@@ -86,18 +86,19 @@
   <button id="cart-button">🛒 Cart (<span id="cart-count">0</span>)</button>
   
 <!-- Cart Modal -->
-<div id="cart-modal" class="modal">
-  <div class="modal-content">
-    <span id="close-modal" class="close">&times;</span>
-    <h2>Your Cart</h2>
-    <ul id="cart-items"></ul>
-    <p id="cart-total"></p>
-    <div class="modal-actions">
-      <button id="proceed-button">Proceed</button>
-      <button id="close-button">Close</button>
+  <div id="cart-modal" class="modal">
+    <div class="modal-content">
+      <span id="close-modal" class="close">&times;</span>
+      <h2>Your Cart</h2>
+      <ul id="cart-items"></ul>
+      <p id="cart-total"></p>
+      <div class="modal-actions">
+        <button id="proceed-button">Proceed</button>
+        <button id="clear-button">Clear</button>
+        <button id="close-button">Close</button>
+      </div>
     </div>
   </div>
-</div>
 
   <script src="/js/deliveryScript/script.js"></script>
 </body>
