--- a/delivery/home.html
+++ b/delivery/home.html
@@ -28,20 +28,20 @@
         <p>Hearty soups and broths</p>
       </a>
       
-      <a href="meerebus.html" class="category-card">
+      <a href="./CategoryMenu/MeeRebus.html" class="category-card">
         <img src="./images/mee-rebus.jpg" alt="Mee Rebus" />
         <h3>Mee Rebus</h3>
         <p>Classic noodle dishes</p>
       </a>
     </div>
     <div class="category-grid">
-      <a href="./CategoryMenu/Sarapan.html" class="category-card">
+      <a href="./CategoryMenu/RotiCanai.html" class="category-card">
         <img src="./images/sarapan.jpg" alt="Sarapan" />
         <h3>Roti Canai</h3>
         <p>Classic roti </p>
       </a>
       
-      <a href="sup.html" class="category-card">
+      <a href="./CategoryMenu/SetTengahHari.html" class="category-card">
         <img src="./images/sup.jpg" alt="Sup" />
         <h3>Set Tengah Hari</h3>
         <p>Variety of Lauk Pauk</p>
