--- a/delivery/CategoryMenu/Sarapan.html
+++ b/delivery/CategoryMenu/Sarapan.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="navbar">
-    <h2>Café Delight</h2>
+    <h2>Sup Tulang ZZ</h2>
   </div>
 
   <div class="product-container">
